force-app/main/default/objects/KDCE_OldUserMapping__c/KDCE_OldUserMapping__c.object-meta.xml
<CustomObject>
    <label>DCE1.0 and IMDL Mapping</label>
    <nameField>
        <displayFormat>OM-{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DCE1 and IMDL Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>