force-app/main/default/objects/KDCE_OldUserMapping__c/fields/OldUserId__c.field-meta.xml
<CustomField>
    <fullName>OldUserId__c</fullName>
    <externalId>true</externalId>
    <label>DCE1.0 Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>