force-app/main/default/objects/KDCE_OldUserMapping__c/fields/OldUserName__c.field-meta.xml
<CustomField>
    <fullName>OldUserName__c</fullName>
    <label>DCE1.0 Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>