force-app/main/default/objects/KDCE_OldUserMapping__c/fields/ToBeUser__c.field-meta.xml
<CustomField>
    <fullName>ToBeUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To Be User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OldUserMapping</relationshipName>
    <type>Lookup</type>
</CustomField>